<resources>
    <string name="app_name">CAMerlang</string>
    <string name="app_slogan">Cemerlangkan hidupmu.</string>
    <string name="logo_content_desc">Logo CAMerlang dalam format warna-warni dan transparan.</string>
    <string name="version_info">Versi prototype A</string>
    <string name="homepage_intro_pic_desc">Seorang wanita sedang merasakan kulitnya di tempat yang terang.</string>
    <string name="content_title_rv_sample">Ini adalah judul.</string>
    <string name="content_list_img_rv_sample">Sebuah gambar untuk entri library.</string>
    <string name="content_list_image_rv_only_pic">Sebuah gambar untuk entri library pada bagian More Images.</string>
    <string name="category_rv_list_sample">Tes kategori</string>
    <string name="category_list_img_desc">Sebuah gambar atau ikon untuk menunjukkan identitas suatu kategori di Library.</string>
    <string name="content_list_image_showcase_desc">Sebuah gambar untuk menampilkan showcase produk skincare di Library dan Homepage.</string>
    <string name="content_list_img_article_desc">Sebuah gambar untuk merepresentasikan suatu artikel di homepage.</string>
    <string name="content_title_article_sample">Ini adalah judul artikel.</string>
    <string name="category_name_sample">Kategori</string>
    <string name="content_seller_pic_desc">Sebuah gambar penjual produk skincare.</string>
    <string name="homepage_header_text">Jaga kulitmu bersama kami.</string>
    <string name="article_head">Artikel terkini</string>
    <string name="article_subhead">Baca tentang segalanya kulit.</string>
    <string name="product_head">Produk perawatan kulit terpopuler</string>
    <string name="product_subhead">Produk-produk skincare yang terpercaya untuk kulitmu.</string>
    <string name="notification_icon_desc">Ikon lonceng untuk menandakan section notifikasi.</string>
    <string name="back_btn_desc">Ikon tanda panah untuk kembali ke menu sebelumnya.</string>
    <string name="dot_separator_desc">Separator berbentuk lingkaran untuk memisahkan kedua belah konten.</string>
    <string name="article_name_desc">Nama artikel</string>
    <string name="disease_name_desc">Nama penyakit</string>
    <string name="risk_level_desc">Level keseriusan</string>
    <string name="loc_type_desc">Tipe lokasi</string>
    <string name="article_duration_desc">Perkiraan waktu baca</string>
    <string name="article_datetime_desc">Tanggal.waktu</string>
    <string name="reminder_text">PENGINGAT</string>
    <string name="sample_time">11.15 WIB</string>
    <string name="notification_content_sample">Jangan lupa untuk menggunakan produk perawatanmu.</string>
    <string name="notification_detail_sample">Kamu sudah melewati dua hari dari waktu pemakaian produk perawatan yang ditentukan. Silakan gunakan untuk meminimalisir permasalahan.</string>
    <string name="next_icon_desc">Ikon seperti tombol \"play\" untuk menandakan bagian \"lebih lanjut\" atau \"selanjutnya\".</string>
    <string name="lib_item_desc_sample">Ini adalah contoh permasalahan.</string>
    <string name="article_header_sample">Ini adalah header.</string>
    <string name="article_content_desc">Konten header.</string>
    <string name="section_1">Gambar lainnya</string>
    <string name="section_2">Produk yang bisa kamu coba</string>
    <string name="section_3">Entri lainnya</string>
    <string name="product_emoji_desc">Sebuah boks yang menandakan bungkusan produk.</string>
    <string name="other_entries_emoji_desc">Sebuah ikon folder yang berisikan beberapa dokumen.</string>
    <string name="picture_emoji_desc">Sebuah gambar berbingkai.</string>
    <string name="article_header_pic_desc">Sebuah gambar yang menunjukkan representatif artikel.</string>
    <string name="calendar_icon_desc">Sebuah ikon kalendar yang bergaya \"flat\".</string>
    <string name="lib_detail_header_pic_desc">Sebuah wadah untuk menaruh illustrasi gambar item library.</string>
    <string name="consultation_page_header">Konsultasi</string>
    <string name="important_note">Catatan Penting</string>
    <string name="consultation_disclaimer_1">Perlu diketahui bahwa saran dan informasi yang diberikan dalam percakapan digunakan sebagai referensi informatif.</string>
    <string name="consultation_disclaimer_2">"Silakan konsultasikan ke dokter atau ahli kulit  berpengalaman jika perlu. "</string>
    <string name="onboarding_text_b">Cari apa yang menghalangimu.</string>
    <string name="onboarding_text_a">Jadilah dirimu.</string>
    <string name="onboarding_text_c">Ceriakan hidupmu.</string>
    <string name="onboarding_text_d">Ayo ceriakan!</string>
    <string name="settings_user_text_intro_4">Statusku sekarang ialah…</string>
    <string name="settings_user_text_intro_3">Profesi/pekerjaanku ialah…</string>
    <string name="settings_user_text_intro_2">Umurku ialah…</string>
    <string name="settings_user_text_intro_1">Namaku ialah…</string>
    <string name="settings_user_page_intro_2">Akun pengguna</string>
    <string name="settings_user_page_intro_1">Pengaturan</string>
    <string name="consultation_page_emoji_desc">Gelembung percakapan sebagai representatif dari percakapan.</string>
    <string name="information_box_desc">Information box for indicating information section.</string>
    <string name="notification_emoji_desc">A ring as a symbol of notification.</string>
    <string name="scanner_use_how_to">Arahkah kameramu secara dekat ke kulit wajahmu untuk mendeteksi masalah kulitmu…\ndan tangkap!</string>
    <string name="camera_mode_switch_icon_desc">Sebuah gambar kamera dengan ikon switch untuk mengindikasikan perpindahan mode kamera (dari landscape ke portrait, dan sebaliknya).</string>
    <string name="user_emoji_desc">Seseorang sebagai perwakilan pengguna suatu aplikasi.</string>
    <string name="rename_icon_desc">Sebuah ikon rename (mengganti nama).</string>
    <string name="age_icon_desc">Seseorang dalam wujud utuh sebagai representatif pengguna.</string>
    <string name="briefcase_profession_icon">Gambar tas kantor (briefcase) sebagai representatif dari suatu pekerjaan atau profesi.</string>
    <string name="signal_icon_desc">Sebuah ikon sinyal sebagai simbol dari konten status atau konten terkini</string>
    <string name="consultation_history_page_intro">Histori konsultasi</string>
    <string name="sample_app_username">Lonard Steven</string>
    <string name="library_menu_intro_1">Seraplah pengetahuanmu</string>
    <string name="library_menu_intro_2">Mengenai segalanya kulit.</string>
    <string name="book_stack_icon_desc">Setumpukan buku yang memiliki beragam pengetahuan.</string>
    <string name="library_menu_text">Perpustakaan</string>
    <string name="library_intro_img_layer1_desc">Blue layer for helping intended library intro picture to be transparent.</string>
    <string name="library_intro_img_layer2_desc">Seseorang yang sedang mengambil suatu buku dari lemari suatu perpustakaan.</string>
    <string name="user_settings_btn_desc">Suatu ikon yang mengindikasikan penambahan user baru.</string>
    <string name="dark_mode_btn_desc">Suatu bulan, biasanya menandakan malam hari.</string>
    <string name="locale_btn_desc">Ikon bola dunia untuk mengindikasikan kegiatan lokalisasi.</string>
    <string name="credits_btn_desc">Selembar kertas yang berisikan skrip, yang dapat berisikan daftar orang, institusi, dan sesuatu yang telah berperan dan berkontribusi dalam proyek.</string>
    <string name="CAMerlang_bw_icon_desc">Ikon logo CAMerlang, dengan elemen kilauan, simbol huruf C, serta lensa kamera.</string>
    <string name="CAMerlang_bw_wordmark_desc">Tulisan (wordmark) brand CAMerlang.</string>
    <string name="age_sample">22 tahun</string>
    <string name="profession_sample">Mahasiswa</string>
    <string name="user_status_sample">Mencoba untuk menjadi seseorang yang bersinar…</string>
    <string name="btn_settings_1_text">Akun pengguna</string>
    <string name="btn_settings_2_text">Mode gelap</string>
    <string name="btn_settings_3_text">Lokalisasi</string>
    <string name="consultation_history_emoji_desc">Ikon emoji notepad atau catatan, sebagai salah satu metode pengarsipan.</string>
    <string name="btn_settings_4_text">Kredit</string>
    <string name="sunflower_pic_desc">Suatu gambar berisikan sebuah bunga matahari yang diletakkan di antara \"teman-temannya\".</string>
    <string name="placeholder_img_settings_main_desc">Gambar placeholder untuk memberikan transparansi warna ke layer saudaranya yang berada di bawahnya.</string>
    <string name="notification_menu_intro">Notifikasi</string>
    <string name="time_icon_desc">Sebuah ikon jam yang terlihat dalam design \"flat\".</string>
    <string name="sample_datetime_consultation_history">18 Juni 2022 | 11.10 WIB</string>
    <string name="diagnosis_result_sample">Yang terdeteksi pada\n gambar ini ialah\n permasalahan kulit berikut…</string>
    <string name="diagnosis_id_sample">consultation-scan-clrg00a223aa001</string>
    <string name="category_sample">Kategori 1</string>
    <string name="detailed_img_container_library_desc">Sebuah tempat khusus untuk menampilkan suatu gambar yang dipilih dari menu library detail.</string>
    <string name="library_section_intro_sample">Konten-konten yang disusun menurut abjad.</string>
    <string name="alphabet_emoji_desc">Contoh suatu emoji yang didasarkan pada abjad.</string>
    <string name="home_navbar_menu">Beranda</string>
    <string name="history_navbar_menu">Histori</string>
    <string name="detect_navbar_menu">Deteksi</string>
    <string name="library_navbar_menu">Pustaka</string>
    <string name="settings_navbar_menu">Setelan</string>
    <string name="dialog_menu_header">Oops! Chat ya!</string>
    <string name="dialog_menu_content_a_text">Untuk saat ini, fitur ini hanya bisa dilakukan untuk keluhan jerawat saja.</string>
    <string name="dialog_menu_content_b_text">Bagimu yang memiliki masalah lainnya, bisa cek melalui chatbot konsultasi di bawah ini!</string>
    <string name="chatbot_button_text">Chatbot Konsultasi</string>
    <string name="back_continue_btn_text">Lanjutkan scanning</string>
    <string name="back_home_btn_text">Kembali ke beranda</string>
    <string name="credits_emoji_desc">Tangan yang diangkat ke atas sebagai suatu simbol menolong dan mendukung seseorang yang telah berkontribusi ke proyek ini secara keseluruhan.</string>
    <string name="credits_page_header">Kredit</string>
    <string name="scanner_fab_icon_desc">Ikon yang senada dengan scanner atau pendeteksi yang dapat mengindikasikan bahwa tombol tersebut merujuk ke fitur scanning atau pendeteksi kamera.</string>
    <string name="credits_text_1">Aplikasi CAMerlang dicetuskan, dirancang, dan dibuat dengan hati dan semangat oleh:</string>
    <string name="team_member_1">Lonard Steven</string>
    <string name="team_member_2">Arya Fikryhuda Nurpatria</string>
    <string name="team_member_4">Fadli Fadillah</string>
    <string name="team_member_3">Muhammad Reza Azhar Priyadi</string>
    <string name="ml_learning_path">Machine Learning</string>
    <string name="md_learning_path">Mobile Development</string>
    <string name="team_member_6">Aldycky Bagus Witjaksana</string>
    <string name="team_member_5">Tomi Timutius</string>
    <string name="cc_learning_path">Cloud Computing</string>
    <string name="credits_text_2">Tim C22-PS064</string>
    <string name="credits_part_1_intro">Tentang kita</string>
    <string name="credits_part_2_intro">Atribusi</string>
    <string name="credits_part_2a_context_text_1">Foto</string>
    <string name="photographer_1">Jernej Graj</string>
    <string name="credits_part_2a_content_1_txt">Seluruh gambar dilisensi oleh lisensi Unsplash (Unsplash License) yang bebas guna.</string>
    <string name="credits_part_2a_content_2_txt">Silakan kunjungi unsplash.com/license untuk informasi lisensi lebih lanjut.</string>
    <string name="photographer_2">Muhammad Rudi Yaddin</string>
</resources>