<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navbar_menu_1"
        android:title="@string/home_navbar_menu"
        android:icon="@drawable/home_menu_icon" />

    <item
        android:id="@+id/navbar_menu_2"
        android:title="@string/history_navbar_menu"
        android:icon="@drawable/consultation_history_menu_icon" />

    <item
        android:id="@+id/navbar_menu_middle_placeholder"
        android:title="@string/detect_navbar_menu" />

    <item
        android:id="@+id/navbar_menu_3"
        android:title="@string/library_navbar_menu"
        android:icon="@drawable/library_menu_icon" />

    <item
        android:id="@+id/navbar_menu_4"
        android:title="@string/settings_navbar_menu"
        android:icon="@drawable/settings_icon" />
</menu>