<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryContainer"
        tools:context=".ui.settings.SettingsMainFragment">

        <ImageView
            android:id="@+id/settings_main_img_layer1"

            style="@style/Backdrop.Setting"

            android:src="@drawable/sunflower_template_user_bg"
            android:contentDescription="@string/sunflower_pic_desc"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/settings_main_img_layer2"

            style="@style/Backdrop.Setting"

            android:src="?attr/colorOnSecondaryContainer"
            android:contentDescription="@string/placeholder_img_settings_main_desc"

            android:alpha="0.5"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_icon"
            android:layout_width="75dp"
            android:layout_height="75dp"

            android:layout_marginBottom="50dp"
            android:layout_marginStart="25dp"
            android:src="?attr/colorSecondaryContainer"

            app:layout_constraintStart_toStartOf="@id/settings_main_img_layer2"
            app:layout_constraintBottom_toBottomOf="@id/settings_main_img_layer2"/>

        <TextView
            android:id="@+id/settings_main_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="15dp"

            android:text="@string/sample_app_username"

            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"

            app:layout_constraintStart_toEndOf="@id/settings_user_icon"
            app:layout_constraintTop_toTopOf="@id/settings_user_icon"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/settings_main_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="15dp"

            android:text="@string/age_sample"

            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14sp"

            app:layout_constraintTop_toBottomOf="@id/settings_main_name"
            app:layout_constraintStart_toEndOf="@id/settings_user_icon"/>

        <ImageView
            android:id="@+id/dot_separator_settings_main"

            style="@style/DotSeparator"

            app:layout_constraintTop_toTopOf="@id/settings_main_age"
            app:layout_constraintBottom_toBottomOf="@id/settings_main_age"
            app:layout_constraintStart_toEndOf="@id/settings_main_age"

            android:contentDescription="@string/dot_separator_desc"/>

        <TextView
            android:id="@+id/settings_main_profession"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="10dp"

            android:text="@string/profession_sample"

            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14sp"

            app:layout_constraintTop_toTopOf="@id/dot_separator_settings_main"
            app:layout_constraintBottom_toBottomOf="@id/dot_separator_settings_main"
            app:layout_constraintStart_toEndOf="@id/dot_separator_settings_main"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/settings_main_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"

            android:text="@string/user_status_sample"

            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"

            app:layout_constraintTop_toBottomOf="@id/settings_main_age"
            app:layout_constraintStart_toEndOf="@id/settings_user_icon"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/btn_settings_card_1"
            style="@style/SettingsMenuClickArea"

            app:layout_constraintTop_toBottomOf="@id/settings_main_img_layer2"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_settings_select_1"
                    style="@style/SettingBox.Main"

                    android:backgroundTint="@color/settings_menu_1"

                    android:src="@drawable/user_account_config_icon"
                    android:contentDescription="@string/user_settings_btn_desc"/>

                <TextView
                    android:id="@+id/btn_settings_select_1_text"
                    style="@style/SettingsMenuClickArea.Text"

                    android:text="@string/btn_settings_1_text"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/btn_settings_card_2"
            style="@style/SettingsMenuClickArea"

            app:layout_constraintTop_toBottomOf="@id/btn_settings_card_1"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_settings_select_2"
                    style="@style/SettingBox.Main"

                    android:backgroundTint="@color/settings_menu_2"

                    android:src="@drawable/night_icon"
                    android:contentDescription="@string/dark_mode_btn_desc"

                    app:tint="?attr/colorOnPrimary"/>

                <TextView
                    android:id="@+id/btn_settings_select_2_text"
                    style="@style/SettingsMenuClickArea.Text"

                    android:text="@string/btn_settings_2_text"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_settings_card_3"
            style="@style/SettingsMenuClickArea"

            app:layout_constraintTop_toBottomOf="@id/btn_settings_card_2"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_settings_select_3"
                    style="@style/SettingBox.Main"

                    android:backgroundTint="@color/settings_menu_3"

                    android:src="@drawable/localization_icon"
                    android:contentDescription="@string/locale_btn_desc"/>

                <TextView
                    android:id="@+id/btn_settings_select_3_text"
                    style="@style/SettingsMenuClickArea.Text"

                    android:text="@string/btn_settings_3_text"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_settings_card_4"
            style="@style/SettingsMenuClickArea"

            app:layout_constraintTop_toBottomOf="@id/btn_settings_card_3"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_settings_select_4"
                    style="@style/SettingBox.Main"

                    android:backgroundTint="@color/settings_menu_4"

                    android:src="@drawable/credits_icon"
                    android:contentDescription="@string/credits_btn_desc"/>

                <TextView
                    android:id="@+id/btn_settings_select_4_text"

                    style="@style/SettingsMenuClickArea.Text"

                    android:text="@string/btn_settings_4_text"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/brand_id_footer_1"

            android:layout_width="65dp"
            android:layout_height="65dp"

            android:layout_marginTop="15dp"

            android:src="@drawable/camerlang_logo_bw_transparent"
            android:contentDescription="@string/CAMerlang_bw_icon_desc"

            app:layout_constraintTop_toBottomOf="@id/btn_settings_card_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/brand_id_footer_2"

            android:layout_width="150dp"
            android:layout_height="50dp"

            android:src="@drawable/camerlang_wordmark_bw_transparent_cropped"
            android:contentDescription="@string/CAMerlang_bw_wordmark_desc"

            app:layout_constraintTop_toBottomOf="@id/brand_id_footer_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
