<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/notification_card"
        style="@style/CardView.Notification"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/notification_card_constraint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/notification_gradient">

            <TextView
                android:id="@+id/notification_type"

                style="@style/NotificationText.Type"

                android:text="@string/reminder_text"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/dot_separator"

                style="@style/DotSeparator"
                android:contentDescription="@string/dot_separator_desc"

                app:layout_constraintStart_toEndOf="@id/notification_type"
                app:layout_constraintTop_toTopOf="@id/notification_type"
                app:layout_constraintBottom_toBottomOf="@id/notification_type"
                app:layout_constraintEnd_toStartOf="@id/datetime_info"/>

            <TextView
                android:id="@+id/datetime_info"

                style="@style/NotificationText.DateTime"

                android:text="@string/sample_time"

                app:layout_constraintStart_toEndOf="@id/dot_separator"
                app:layout_constraintBottom_toTopOf="@id/notification_content"/>

            <TextView
                android:id="@+id/notification_content"

                style="@style/NotificationText.Content"

                android:text="@string/notification_content_sample"

                app:layout_constraintTop_toBottomOf="@id/notification_type"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/notification_detail"

                style="@style/NotificationText.Detail"

                android:text="@string/notification_detail_sample"

                app:layout_constraintTop_toBottomOf="@id/notification_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>