<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_primaryInverse"
    tools:context=".ui.settings.SettingsUserActivity">

    <ImageView
        android:id="@+id/back_btn"

        style="@style/BackButton"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:contentDescription="@string/back_btn_desc"/>

    <ImageView
        android:id="@+id/user_settings_intro_emoji_icon"
        style="@style/PageHeader.Emoji"

        android:contentDescription="@string/user_emoji_desc"
        app:layout_constraintEnd_toStartOf="@id/user_settings_page_intro_text_2"
        app:layout_constraintTop_toTopOf="parent"

        android:src="@drawable/user_account_emoji_icon"/>

    <TextView
        android:id="@+id/user_settings_page_intro_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"

        android:fontFamily="@font/poppins_semibold"
        android:text="@string/settings_user_page_intro_1"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"

        app:layout_constraintBottom_toTopOf="@id/user_settings_page_intro_text_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/user_settings_page_intro_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="15dp"

        android:text="@string/settings_user_page_intro_2"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="12sp"
        android:textColor="?attr/colorOnPrimary"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_settings_page_intro_text_1"
        app:layout_constraintBottom_toBottomOf="@id/user_settings_intro_emoji_icon"/>

    <ImageView
        android:id="@+id/settings_user_section_1"
        style="@style/SettingBox.UserAccount"

        android:backgroundTint="@color/settings_user_section_1"

        android:src="@drawable/rename_icon"
        android:contentDescription="@string/rename_icon_desc"

        app:layout_constraintTop_toBottomOf="@id/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="?attr/colorOnPrimary"/>

    <TextView
        android:id="@+id/settings_user_section_1_intro_txt"
        style="@style/SettingText.UserAccount"

        android:text="@string/settings_user_text_intro_1"

        app:layout_constraintStart_toEndOf="@id/settings_user_section_1"
        app:layout_constraintTop_toTopOf="@id/settings_user_section_1"
        app:layout_constraintBottom_toTopOf="@id/settings_user_section_1_column"/>

    <com.lonard.camerlangproject.edittext.GeneralEditText
        android:id="@+id/settings_user_section_1_column"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"

        android:background="@color/md_theme_light_surfaceVariant"

        android:padding="5dp"
        android:fontFamily="@font/poppins_regular"

        app:layout_constraintTop_toBottomOf="@id/settings_user_section_1_intro_txt"
        app:layout_constraintStart_toEndOf="@id/settings_user_section_1"
        app:layout_constraintBottom_toBottomOf="@id/settings_user_section_1"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/settings_user_section_2"
        style="@style/SettingBox.UserAccount"

        android:backgroundTint="@color/settings_user_section_2"

        android:src="@drawable/person_icon"
        android:contentDescription="@string/age_icon_desc"

        app:layout_constraintTop_toBottomOf="@id/settings_user_section_1"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="?attr/colorOnPrimary"/>

    <TextView
        android:id="@+id/settings_user_section_2_intro_txt"

        style="@style/SettingText.UserAccount"

        android:text="@string/settings_user_text_intro_2"

        app:layout_constraintStart_toEndOf="@id/settings_user_section_2"
        app:layout_constraintTop_toTopOf="@id/settings_user_section_2"
        app:layout_constraintBottom_toTopOf="@id/settings_user_section_2_column"/>

    <com.lonard.camerlangproject.edittext.NumberEditText
        android:id="@+id/settings_user_section_2_column"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"

        android:background="@color/md_theme_light_surfaceVariant"

        android:padding="5dp"
        android:fontFamily="@font/poppins_regular"

        app:layout_constraintTop_toBottomOf="@id/settings_user_section_2_intro_txt"
        app:layout_constraintStart_toEndOf="@id/settings_user_section_2"
        app:layout_constraintBottom_toBottomOf="@id/settings_user_section_2"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/settings_user_section_3"
        style="@style/SettingBox.UserAccount"

        android:backgroundTint="@color/settings_user_section_3"

        android:src="@drawable/briefcase_icon"
        android:contentDescription="@string/briefcase_profession_icon"

        app:layout_constraintTop_toBottomOf="@id/settings_user_section_2"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="?attr/colorOnPrimary"/>

    <TextView
        android:id="@+id/settings_user_section_3_intro_txt"
        style="@style/SettingText.UserAccount"

        android:text="@string/settings_user_text_intro_3"

        app:layout_constraintStart_toEndOf="@id/settings_user_section_3"
        app:layout_constraintTop_toTopOf="@id/settings_user_section_3"
        app:layout_constraintBottom_toTopOf="@id/settings_user_section_3_column"/>

    <com.lonard.camerlangproject.edittext.GeneralEditText
        android:id="@+id/settings_user_section_3_column"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"

        android:background="@color/md_theme_light_surfaceVariant"

        android:padding="5dp"
        android:fontFamily="@font/poppins_regular"

        app:layout_constraintTop_toBottomOf="@id/settings_user_section_3_intro_txt"
        app:layout_constraintStart_toEndOf="@id/settings_user_section_3"
        app:layout_constraintBottom_toBottomOf="@id/settings_user_section_3"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/settings_user_section_4"
        style="@style/SettingBox.UserAccount"

        android:backgroundTint="@color/settings_user_section_4"

        android:src="@drawable/user_status_icon"
        android:contentDescription="@string/signal_icon_desc"

        app:layout_constraintTop_toBottomOf="@id/settings_user_section_3"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/settings_user_section_4_intro_txt"
        style="@style/SettingText.UserAccount"

        android:text="@string/settings_user_text_intro_4"

        app:layout_constraintStart_toEndOf="@id/settings_user_section_4"
        app:layout_constraintTop_toTopOf="@id/settings_user_section_4"
        app:layout_constraintBottom_toTopOf="@id/settings_user_section_4_column"/>

    <com.lonard.camerlangproject.edittext.StatusEditText
        android:id="@+id/settings_user_section_4_column"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"

        android:background="@color/md_theme_light_surfaceVariant"

        android:fontFamily="@font/poppins_regular"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:padding="5dp"

        android:gravity="top"

        app:layout_constraintTop_toBottomOf="@id/settings_user_section_4_intro_txt"
        app:layout_constraintStart_toEndOf="@id/settings_user_section_4"
        app:layout_constraintBottom_toBottomOf="@id/settings_user_section_4"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>